--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,36 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-  <jdkLevel>1.8</jdkLevel>
+    <jdkLevel>1.8</jdkLevel>
+    <requiredMavenVersion>[2.1,)</requiredMavenVersion>
+    <main.basedir>${project.basedir}</main.basedir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+	<maven.compiler.source>1.8</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
     <avro.version>1.8.2</avro.version>
   </properties>
 
   <build>
     <plugins>
      
+            <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <version>${avro.version}</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>schema</goal>
+            </goals>
+            <configuration>
+				<sourceDirectory>${project.basedir}/src/main/resources/SDTL/avro/</sourceDirectory>
+				<outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+			  </configuration>
+          </execution>
+        </executions>
+      </plugin>
       
       <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
@@ -73,17 +95,14 @@
 		<version>1.7.25</version>
 		<scope>compile</scope>
 </dependency>
-<dependency>
-  		<groupId>SDPS</groupId>
-  		<artifactId>SDTL</artifactId>
-  		<version>0.1</version>
-</dependency>
+
 <!-- https://mvnrepository.com/artifact/org.apache.avro/avro -->
-<!--dependency>
+<dependency>
     <groupId>org.apache.avro</groupId>
     <artifactId>avro</artifactId>
     <version>${avro.version}</version>
-</dependency-->
+
+</dependency>
 
   </dependencies>
   <version>1.3.0</version>
